<resources>
    <string name="app_name">Dukan</string>
    <string name="password">Passwod</string>
    <string name="username">User Name</string>
    <string name="get_information">Get Information</string>
    <string name="hard_soft_info">Hardware and Software Information</string>
    <string name="serial">SERIAL: </string>
    <string name="model">MODEL: </string>
    <string name="id">ID: </string>
    <string name="manufacturer">MANUFACTURER: </string>
    <string name="brand">BRAND: </string>
    <string name="type">TYPE: </string>
    <string name="user">USER: </string>
    <string name="base">BASE: </string>
    <string name="incremental">INCREMENTAL: </string>
    <string name="sdk">SDK: </string>
    <string name="board">BOARD: </string>
    <string name="host">HOST: </string>
    <string name="fingerprint">FINGERPRINT: </string>
    <string name="versioncode">VERSION CODE: </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="welcom">Welcom back. Log in to continue</string>
    <string name="login">Sign In</string>
    <string name="newuser">New User? Create Account</string>
    <string name="register">Register</string></resources>