<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/_30sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_user"
                android:paddingLeft="@dimen/_12sdp"
                android:paddingRight="@dimen/_12sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:background="@drawable/circle_background"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_2sdp"
                android:layout_gravity="center"
                app:cardElevation="@dimen/_5sdp"
                android:layout_margin="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_7sdp"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/welcom"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/black"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_gravity="center"
                        android:gravity="center"/>


                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_gravity="center"
                        android:paddingLeft="@dimen/_7sdp"
                        android:drawableRight="@drawable/ic_mail"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:inputType="textEmailAddress"
                        android:paddingRight="@dimen/_7sdp"
                        android:paddingTop="@dimen/_7sdp"
                        android:fontFamily="@font/arialmt"
                        android:background="@drawable/edittext_style"
                        android:paddingBottom="@dimen/_7sdp"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_gravity="center"
                        android:fontFamily="@font/arialmt"
                        android:drawableRight="@drawable/ic_lock"
                        android:paddingLeft="@dimen/_7sdp"
                        android:paddingRight="@dimen/_7sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:inputType="textPassword"
                        android:paddingTop="@dimen/_7sdp"
                        android:background="@drawable/edittext_style"
                        android:paddingBottom="@dimen/_7sdp"/>


                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp"
                        android:id="@+id/loginbutton"
                        android:textStyle="bold"
                        android:fontFamily="@font/arialmt"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:background="@drawable/btn_style"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/_12sdp">


                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/newuser"
                            android:paddingLeft="@dimen/_5sdp"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:textSize="@dimen/_12sdp"
                            android:fontFamily="@font/arialmt"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/web_site_button_color"
                            android:text="@string/register"
                            android:paddingLeft="@dimen/_5sdp"
                            android:paddingRight="@dimen/_5sdp"
                            android:textStyle="bold"
                            android:id="@+id/tv_register"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:textSize="@dimen/_12sdp"
                            android:fontFamily="@font/arialmt"/>

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arialmt"
                android:text="Forgot Password ?"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/_20sdp"/>

        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>